cot-macros/tests/ui/attr_model_multiple_pks.stderr
error: composite primary keys are not supported; only one primary key field is allowed
 --> tests/ui/attr_model_multiple_pks.rs:8:5
  |
8 |     id_2: i64,
  |     ^^^^
